src/components/DCC/DCC.module.css
span.statusTag > span {
  overflow: visible;
}

.topDetails {
  display: flex;
  padding: 1rem;
  border-top: 1px solid var(--color-gray-lighter);
}

.field {
  display: flex;
  flex-direction: column;
}

.fieldLabel {
  color: var(--color-gray-blueish);
}

.statement {
  white-space: pre-line;
  padding-top: 0.5rem;
}

.supportOpposeButtons {
  float: right;
  padding-bottom: 1rem;
}

.supportOpposeBar {
  width: 100%;
  padding: 1rem;
  border-top: 1px solid var(--color-gray-lighter);
}

.dccActions {
  margin: 2rem 0;
}

/* EXTRA SMALL SCREENS*/
@media screen and (max-width: 560px) {
  .topDetails {
    flex-direction: column;
  }
}

